Slight UI changes, added flavour files

--- a/_posts/2018-03-13-logo.md
+++ b/_posts/2018-03-13-logo.md
@@ -1,7 +1,47 @@
 ---
 layout: default
-title: "hackseq_logo.jpg"
+title: "logo.txt"
 tags:
 ---
-
-![Logo]({{ site.asset }}/hs/hackseq_logo_sq.png)
+<div><FONT FACE="courier">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,0No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,OWd.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,0Wx;:c;.&nbsp;&nbsp;&nbsp;.,:ccc;.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.,::cc;.&nbsp;&nbsp;,0Mx.&nbsp;.;;'.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,KMKxkXNx.&nbsp;&nbsp;;xxddkXKc.&nbsp;.c0XX0kxkl.&nbsp;,0Wx;o00o'&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,KMk..dWK:&nbsp;.,loddkXMk.&nbsp;:XWx,.&nbsp;&nbsp;..&nbsp;&nbsp;,0MNXWO,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,0Wd..oWX:&nbsp;;0W0ocoKMO.&nbsp;cNNl..&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,0MKkKXo.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,KWd..oWX:&nbsp;:XWk;;oXMO.&nbsp;'xNKkdc:l:.&nbsp;,0Mx.,ONk,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'ox:..;do'&nbsp;.;dkxoloxc.&nbsp;&nbsp;.:dxkkkx:.&nbsp;.lx:.&nbsp;'ld:.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.lxoc;,....cxkkx:.&nbsp;&nbsp;&nbsp;&nbsp;.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'ldkxl,..&nbsp;..'cxkd,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'OO,....&nbsp;&nbsp;&nbsp;lWMMWd:odo:..&nbsp;&nbsp;..;lddclkKKc.&nbsp;.;:;.&nbsp;.:0Kl:doc;,....,oddd;.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'OXxxO0O,&nbsp;&nbsp;lWMMWxxNO:...,;'..,xNOdkx;&nbsp;&nbsp;cKWMWXl.&nbsp;'dokXc....&nbsp;&nbsp;&nbsp;:XMMMx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'OMMMMMX;&nbsp;&nbsp;lWMMWxdx.&nbsp;.dXWWNk,&nbsp;.lxlo,&nbsp;&nbsp;:XMMMMMNc&nbsp;&nbsp;'ckXxodkO:&nbsp;&nbsp;:XMMMx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'OMMMMMX;&nbsp;&nbsp;lWMMWx:'&nbsp;.dWMMMMMO'&nbsp;.;;'.&nbsp;.dWMWWWMMk.&nbsp;&nbsp;'kMMMMMWl&nbsp;&nbsp;:XMMMx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'OMMMMMX;&nbsp;&nbsp;lWMMWd.&nbsp;&nbsp;'0MMMMMMNc&nbsp;&nbsp;..&nbsp;&nbsp;&nbsp;.kW0c,:OW0'&nbsp;&nbsp;.kMMMMMWl&nbsp;&nbsp;:XMMWx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'OMMMMMX;&nbsp;&nbsp;lWMMWo.&nbsp;&nbsp;;XNkc:dXWo&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.kWx.&nbsp;.oN0'&nbsp;&nbsp;.kMMMMMWl&nbsp;&nbsp;:XMMWx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'OMMMMMX;&nbsp;&nbsp;lWMMWo.&nbsp;&nbsp;:XX:&nbsp;&nbsp;'OWd&nbsp;&nbsp;&nbsp;..&nbsp;&nbsp;.kMN0k0NMO.&nbsp;&nbsp;.kMMMMMWl&nbsp;&nbsp;:XMMWx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'OMMMMMX;&nbsp;&nbsp;lWMMWd.&nbsp;&nbsp;;XWXkxKWWo&nbsp;&nbsp;&nbsp;':.&nbsp;&nbsp;oWMMMMMWd.&nbsp;.;kMMMMMWl&nbsp;&nbsp;:XMMWx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'OMMMMMX;&nbsp;&nbsp;lWMMWd'.&nbsp;.OMMMMMMX:&nbsp;&nbsp;.lxl.&nbsp;'OWMMMM0,&nbsp;.:lkMMMMMWl&nbsp;&nbsp;:XMMMx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'ONkoooc.&nbsp;&nbsp;'lool:c;&nbsp;&nbsp;cNMMMMWx.&nbsp;.cdk0d.&nbsp;.oO0Od'&nbsp;.lOokMMMMMWl&nbsp;&nbsp;:XMMWx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'ONo''''.''''''''dO;&nbsp;&nbsp;;k0KOl.&nbsp;.xkdkXWOc'.....'cONXokWKkxxd,&nbsp;&nbsp;'dxxx:.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'OMNOo:,'';cd0NXdxWXx;......,l0WOdkXWX0xl;,,:OWMMXokWd.............&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'OKl.&nbsp;.:lc;.&nbsp;'xXxxWMNOc'...;xXMMOdkKk'....&nbsp;&nbsp;.xMMMXokWKkxolc:cd0KKKl.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'d:&nbsp;&nbsp;cKWMMWk'&nbsp;.odxNk;.&nbsp;'::,.&nbsp;'dXOdkK0ddk0x.&nbsp;.xMMMXokXl....&nbsp;&nbsp;&nbsp;:XMMWx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.,.&nbsp;,KMMMMMWx.&nbsp;.;dd.&nbsp;.xNMMWO;&nbsp;&nbsp;cxdkXMMMMM0'&nbsp;.xMMMXokXxldxk;&nbsp;&nbsp;:XMMMx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;..&nbsp;&nbsp;lWMWNNMM0'&nbsp;&nbsp;.;.&nbsp;.dWMMMMM0'&nbsp;.;okXMMMMM0'&nbsp;.xMMMXokMMMMMWl&nbsp;&nbsp;:XMMWx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;dWKc',dNX;&nbsp;&nbsp;&nbsp;.&nbsp;&nbsp;,0MMWWMMNc&nbsp;&nbsp;.cOXMMMMM0'&nbsp;.xMMMXokMMMMMWl&nbsp;&nbsp;:XMMWx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.dWO,..lXX;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;;XNx;;oXWo&nbsp;&nbsp;&nbsp;:OXMMMMM0'&nbsp;.xMMMXokMMMMMWl&nbsp;&nbsp;:XMMWx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.&nbsp;&nbsp;&nbsp;oWWX0KNMK,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:XXc&nbsp;&nbsp;,OWd&nbsp;&nbsp;&nbsp;:OXMMMMM0'&nbsp;.xMMMXokMMMMMWl&nbsp;&nbsp;:XMMWx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;..&nbsp;&nbsp;:XMMMMMMk.&nbsp;.'.&nbsp;&nbsp;;KMXOOKWWo&nbsp;&nbsp;&nbsp;:OXMMMMM0'&nbsp;.xMMMXokMMMMMWl&nbsp;&nbsp;:XMMMx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'l'&nbsp;.dNMMMMK;&nbsp;&nbsp;:l,.&nbsp;.OMMMMMMX:&nbsp;&nbsp;.lOXMMMMM0'&nbsp;.xMMMXokMMMMMWl&nbsp;&nbsp;:XMMMx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'OO,&nbsp;.:dkko'&nbsp;.cKxl;&nbsp;&nbsp;cXMMMMWd.&nbsp;'ldkXNkdddc.&nbsp;&nbsp;;dddl:kMMMMMWl&nbsp;&nbsp;:XMMWx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'kN0o,......;xKXdx0:&nbsp;&nbsp;;dO0kc.&nbsp;'kkox0O,............'kWKkkkx,&nbsp;&nbsp;'dkkkc.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;..,,''......',,''oNXx;......,o0Wk,.''.............'kNo....&nbsp;&nbsp;&nbsp;&nbsp;.....&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.;;;;'....',cll:...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.....&nbsp;&nbsp;&nbsp;.':;,...'........&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.ckOkxkkd'&nbsp;&nbsp;.;dOOOOkc.&nbsp;.;x0Oxdk0l.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;;XWOc,,,,.&nbsp;&nbsp;:XNk:;oXWd.,0WO;,dNMx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.lO000Okd,&nbsp;.xWN0kkk0Kx'cNNc&nbsp;&nbsp;,0Mx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;..'',lKMWk..lNNx;,,;c;.;KWx'.lXMx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'dkxxk0KOc.&nbsp;.ck0OOkOOc..c0X0kOXMx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.',,,'..&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;..',,'..&nbsp;&nbsp;&nbsp;.',.,OMx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'OMx.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+</FONT></div>
