fixed broken links

--- a/_posts/2018-03-20-README.txt.md
+++ b/_posts/2018-03-20-README.txt.md
@@ -35,11 +35,11 @@ $$&nbsp;|&nbsp;&nbsp;$$&nbsp;|\$$$$$$$&nbsp;|\$$$$$$$\&nbsp;$$&nbsp;|&nbsp;\$$\&
 
 ## Team Leaders
 
-hackseq projects are started by someone like you. If you have a scientific idea you want to turn into a reality then you're a Team Leader -- [Apply Here](/2018/03/16/team-leads.txt.html)
+hackseq projects are started by someone like you. If you have a scientific idea you want to turn into a reality then you're a Team Leader -- [Apply Here](https://hackseq.github.io/hs18/2018/03/16/team-leads.txt.html)
 
 ## Participants
 
-A hackathon is a great place to meet like-minded individuals, learn, and collaborate to create something big. If you want to join a hackseq team -- [Apply Here](2018-03-15-participants.txt.md)
+A hackathon is a great place to meet like-minded individuals, learn, and collaborate to create something big. If you want to join a hackseq team -- [Apply Here](https://hackseq.github.io/hs18/2018/03/15/participants.txt.html)
 
 
 <br><br>
