--- a/_posts/2018-08-11-Projects2018.txt.md
+++ b/_posts/2018-08-11-Projects2018.txt.md
@@ -85,30 +85,70 @@ We used MetaPathways v2.5 in combination with Pathway Tools and the MetaCyc hier
 
 ----------------------------------------
 
-## [Project 4: beRI: Virtual Environments for R](https://github.com/datasnakes/renv)
-**Team Lead:** Rob Gilmore (robgilmore127 [AT] gmail.com)
+## Project 5: Alignment-free Pathogen Genomics
+**Team Lead:** Alex Sweeten (alex.sweeten [AT] gmail.com)
 
-[**Project Page**](https://github.com/GFA-spec/assembler-components/wiki/Hackseq-2018)
-
-*Are you a bioinformatician frustrated by R's inability to resolve common dependency issues? Help develop beRi, a package management, reproducible workflow, and installation toolkit for the R programming language.*
+*Interested in developing a novel bioinformatics pipeline? Given the unprecedented size of genomic information, new methods are required to organize and manage this data. The goal of this project will be to develop and test an alignment-free method, and apply it towards datasets of pathogenic organisms.*
 
 **Required Skills**
-- Python / Python Libs: * *
-- R: * *
+- Python : * *
+- GitHub: *
 - Bash: *
 
 **Beneficial Skills**
-- GitHub
-- Virtualization
+- Data visualization
+- Parallel programming
+- Conda package development
+- Galaxy package development
+- Clustering algorithms
  
 **Abstract:**
 
-The R programming language currently lacks a standard way to resolve common dependency issues that make it difficult to reproduce various data analysis. Therefore the R community needs a tool or toolkit like Python's pip or JavaScript's npm. beRi ("beri environments for R installations") is a package management, reproducible workflow, and installation toolkit for the R programming language. The project will be developed under 4 separate repositories: renv (virtual environments), rinse (source installation), rut (dependency utils), and beRi (core). This project will primarily be built using Python 3, but will also utilize R and bash. R's documentation will be relied on for guidance.
-
+Determining similarity between bacterial isolates is an important requirement for epidemiological analysis. Alignment-based genomic methods are commonly used to tackle this problem. However, in cases of low sequence homology, horizontal gene transfer, or lack of a priori information, as is common when dealing with pathogenic bacteria, alignment-based methods pose significant problems. The normalized compression distance (NCD) is a parameter and alignment-free distance metric, which has shown recent success in genomics, specifically in classifying viral sequences.
+Here, I propose to develop a pipeline for allowing users to apply NCD to their genomic data, as well as for users to visualize their results in a presentable and easy to read format. This application will be built using a Python framework and developed into a Conda package and/or Galaxy workflow (depending on time required & participant experience). Furthermore, I propose to test/benchmark our pipeline using datasets of pathogenic bacteria and viral sequences. This project will be a novel community-based application, potentially facilitating further research into alignment-free similarity methods.
 
 ----------------------------------------
 
-## Project 9: Anatomy of Morbidity
+## Project 6: Simulating Transcriptome Structural Variants
+**Team Lead:** Morgan Bye
+
+
+**Required Skills**
+- Python : * *
+
+
+**Beneficial Skills**
+- Second generation sequencing
+- Molecular Biology
+ 
+**Abstract:**
+
+Tools currently exist for the modelling of structural variants (SV) in genomic space, but not the transcriptome. Modelling the transcriptome has greater complexity due to splicing and expression level variations. Such a tool would be key to the validation of new and existing bioinformatic tools that seek to call SVs from transcriptome data.
+
+----------------------------------------
+
+## Project 7: Blockchain for Infectious Disease
+**Team Lead:** Veena Ghorakavi
+
+
+**Required Skills**
+- Python : * *
+- Blockhain: *
+
+
+**Beneficial Skills**
+- Solidity Contracts
+- Virology
+- Epidemiology / Biostatistics
+- Blockchain development
+ 
+**Abstract:**
+
+Understanding how to track and prevent the spread of infectious diseases is a task that needs to both protect the identity of the individual impacted and understand the prognosis of the spread. As a result, combining the tracking of infectious diseases with blockchain technology is an important albeit unexplored ideal. The idea is to allow people to mark themselves as infected and for data scientists and medical professionals to use this information.
+
+----------------------------------------
+
+## Project 8: Anatomy of Morbidity
 **Team Lead:** [Noushin Nabivi](https://twitter.com/nabavinoushin) (nabavinoushin [AT] gmail.com)
 
 [**Project Page**][https://github.com/NoushinN/anatomy-of-morbidity]
