--- a/_posts/2018-08-11-Projects2018.txt.md
+++ b/_posts/2018-08-11-Projects2018.txt.md
@@ -42,8 +42,6 @@ The goal of HackSeq18 will be the development of k-REUSE and comparison to other
 ## [Project 2: Genome Assembler Components](https://github.com/GFA-spec/assembler-components/wiki/Hackseq-2018)
 **Team Leads:** [Shaun Jackman](http://sjackman.ca/), Rayan Chikhi and Paul Medvedev
 
-[**Project Page**]
-
 *Our hackseq project aims to create a better assembly tool by mixing and matching components of various assembly tools. We will pit these Frankenstein assembly pipelines against each other in a fantastic assembler bake off!*
 
 **Required Skills**
@@ -65,8 +63,6 @@ We will work together to create modular assembler components for AssemblerFlow, 
 ## Project 3: TaraCyc
 **Team Lead:** Arjun Baghela (ECOSCOPE)
 
-[**Project Page**]
-
 *This project will aim to construct a website to represent thousands of ocean virus genomes. The goal of the website is to allow world citizens to play, explore and interact with the genome dataset to gain understanding into the microscopic life living in Earth’s oceans.*
 
 **Required Skills**
@@ -82,6 +78,34 @@ We will work together to create modular assembler components for AssemblerFlow, 
 TARA Oceans represents one of the world’s greatest coordinated research and sampling efforts and has collected years of standardized and detailed information about Earth’s largest cohesive eco-system providing insights crucial for the preservation of mankind our planet. Of particular focus is microbial community metabolism, which drives biogeochemical cycling in the ocean through networks of metabolite exchange and gene transfer. Viruses can reprogram these networks by co-opting host metabolism during infection using auxiliary metabolic genes (AMGs) encoded in viral genomes. Metabolic reprogramming has the potential to alter metabolic flux at the individual, population and community levels with resulting feedback on biogeochemical cycling at ecosystem scales. While previous gene-centric studies have identified viral AMGs associated with carbon and energy metabolism in the sunlit and dark ocean, the extent to which reprogramming targets the metabolic repertoire of marine microbial communities remains unconstrained. Here we use a pathway-centric approach to identify known and novel metabolic hotspots associated with global AMG distribution patterns and bound viral reprogramming potential in the ocean.
 
 We used MetaPathways v2.5 in combination with Pathway Tools and the MetaCyc hierarchy of metabolic pathways to construct an environmental pathway genome database (ePGDBs) from hundreds of thousand viral contigs assembled from the Tara Oceans transect . This global ocean virome (GOV) was assembled from a subset of 90 viral fractions from a total of 288 size-fractioned samples spanning the entire transect. For Hackseq, we wish to construct a website called TaraCyc, which would represent a compendium of these ePGDBs and provide a comprehensive collection of MetaPathways output and extracted Environmental Pathway/Genome Databases (ePGDBs). Further, the TaraCyc website would allow world citizens to play, explore and interact with the dataset and gain understanding into the microscopic life living in Earth’s ocean.
+
+----------------------------------------
+
+
+## Project 4: beRi: Virtual Environments for R
+**Team Lead:** Rob Gilmore (robgilmore127 [AT] gmail.com)
+
+*Are you a bioinformatician frustrated by R's inability to resolve common dependency issues? Help develop beRi, a package management, reproducible workflow, and installation toolkit for the R programming language.*
+
+**Required Skills**
+- Communication: * * 
+- Python3: * * +
+- R: * 
+- Bash: *
+
+
+**Beneficial Skills**
+- Github
+- Virtualization
+- Leadership
+- PyCharm / Rstudio / Atom IDE
+- R Functions: devtools, packrate, miniCRAN, tidyverse
+- Python Libs: click, yaml, cookiecutter
+- Knowledge of local craft beers
+
+**Abstract:**
+
+The R programming language currently lacks a standard way to resolve common dependency issues that make it difficult to reproduce various data analysis. Therefore the R community needs a tool or toolkit like Python's pip or JavaScript's npm. beRi ("beri environments for R installations") is a package management, reproducible workflow, and installation toolkit for the R programming language. The project will be developed under 4 separate repositories: renv (virtual environments), rinse (source installation), rut (dependency utils), and beRi (core). This project will primarily be built using Python 3, but will also utilize R and bash. R's documentation will be relied on for guidance.
 
 ----------------------------------------
 
