Updated website for participant applications

--- a/_posts/2018-08-11-Projects2018.txt.md
+++ b/_posts/2018-08-11-Projects2018.txt.md
@@ -4,13 +4,12 @@ title: "Projects2018.txt"
 tags: participants apply
 ---
 
-# The Projects
-(more coming online)
-
-**Skill Proficiency Requirements**<br/><br/>
+**Skill Proficiencies**<br/><br/>
  	\*       : "I can work with this langauge, if I have access to Stack Overflow ..."<br/><br/>
  	\* \*    : "I know this language and use it regularily."<br/><br/>
  	\* \* \* : "I am one with the language."<br/><br/>
+
+----------------------------------------
 
 ## [Project 1: REUSE](https://github.com/chorltsd/REUSE)
 **Team Lead:** Sam Chorlton (sam.chorlton [AT] pm.me)
