--- a/_posts/2018-08-12-README.txt.md
+++ b/_posts/2018-08-12-README.txt.md
@@ -24,9 +24,9 @@ $$&nbsp;|&nbsp;&nbsp;$$&nbsp;|\$$$$$$$&nbsp;|\$$$$$$$\&nbsp;$$&nbsp;|&nbsp;\$$\&
 
 *Who:* hackseq is open to everyone with coding experience. The focus is on empowering students and trainees who want to apply their skills and knowledge in a creative new way.
 
-*When:* hackseq18 is happening October 2018.
+*When:* hackseq18 is happening October 12-14 2018.
 
-*Where:* Vancouver, BC. Canada
+*Where:* UBC Life Sciences Center -- Vancouver, BC. Canada
 
 
 \*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*
@@ -35,7 +35,7 @@ $$&nbsp;|&nbsp;&nbsp;$$&nbsp;|\$$$$$$$&nbsp;|\$$$$$$$\&nbsp;$$&nbsp;|&nbsp;\$$\&
 
 ## Team Leaders
 
-hackseq projects are started by someone like you. If you have a scientific idea you want to turn into a reality then you're a Team Leader -- [Apply Here](https://hackseq.github.io/hs18/2018/03/16/team-leads.txt.html)
+hackseq projects are started by someone like you. If you have a scientific idea you want to turn into a reality then you're a Team Leader -- [Apply Here](https://hackseq.github.io/hs18/2018/03/14/team-leads.txt.html)
 
 ## Participants
 
