--- a/_posts/2018-08-11-Projects2018.txt.md
+++ b/_posts/2018-08-11-Projects2018.txt.md
@@ -173,7 +173,7 @@ Understanding how to track and prevent the spread of infectious diseases is a ta
 
 ## [Project 8: Anatomy of Morbidity](https://github.com/NoushinN/anatomy-of-morbidity)
 
-**Team Lead:** [Noushin Nabivi](https://twitter.com/nabavinoushin) (nabavinoushin [AT] gmail.com)
+**Team Lead:** [Noushin Nabavi](https://twitter.com/nabavinoushin) (nabavinoushin [AT] gmail.com)
 
 *We are going to work together in order to analyze an open Government dataset released by Canadian Vital Statistics. We will make hypotheses about the causes of death across Canada over time and test our hypotheses through generating informative plots. This is a great opportunity for those who are new to computational biology to learn some new skills and meet other scientists in the field.*
 
