Added TOC to project page

--- a/_posts/2018-08-11-Projects2018.txt.md
+++ b/_posts/2018-08-11-Projects2018.txt.md
@@ -4,6 +4,13 @@ title: "Projects2018.txt"
 tags: participants apply
 ---
 
+# hackseq18 project list
+
+{:toc}
+
+1. Project 1: REUSE
+2. ...
+
 **Skill Proficiencies**<br/><br/>
  	\*       : "I can work with this langauge, if I have access to Stack Overflow ..."<br/><br/>
  	\* \*    : "I know this language and use it regularily."<br/><br/>
