Added info on project 6

--- a/_posts/2018-08-11-Projects2018.txt.md
+++ b/_posts/2018-08-11-Projects2018.txt.md
@@ -140,20 +140,32 @@ Here, I propose to develop a pipeline for allowing users to apply NCD to their g
 ----------------------------------------
 
 ## Project 6: Simulating Transcriptome Structural Variants
-**Team Lead:** Morgan Bye
+**Team Leads:** Cara Reisle (caralynreisle [AT] gmail.com) & Morgan Bye (morgan [AT] morganbye.com)
 
+*While there are tools to simulate structural variants in genomic data, currently no such applications exist for transcriptomes. Simulated data is required to properly evaluate structural variant callers.*
 
 **Required Skills**
-- Python : * *
+- Programming: * *
+- Python : *
+- Genetics/Sequencing: *
+
 
 
 **Beneficial Skills**
-- Second generation sequencing
-- Molecular Biology
+- Structural Variation
+- BAM/SAM file formats
+- Pysam library
  
 **Abstract:**
 
-Tools currently exist for the modelling of structural variants (SV) in genomic space, but not the transcriptome. Modelling the transcriptome has greater complexity due to splicing and expression level variations. Such a tool would be key to the validation of new and existing bioinformatic tools that seek to call SVs from transcriptome data.
+The goal of this project is to produce an application that is able to simulate structural variants in transcriptome data. The application will be written in python. It will be a pipeline consisting of several steps:
+- Specification of the structural variants to be simulated
+- Generation of the resulting transcriptome sequence
+- Simulating paired-end reads covering the structural variant breakpoints
+- Alignment of the simulated reads to the reference genome to produce a BAM file
+
+If you’re new to structural variants or working with sequencing data, it would be a good idea to do a bit of background reading. I’ve listed a some potentially relevant literature below.
+deFuse (PMID 21625565), Chimerascan (PMID 21840877), STAR (PMID 26334920), BAMSurgeon (PMID 25984700), Flux Simulator (PMID 22962361), MAVIS (PMID 30016509), SQUID (PMID 29650026)
 
 ----------------------------------------
 
