Update last project

--- a/_posts/2018-08-11-Projects2018.txt.md
+++ b/_posts/2018-08-11-Projects2018.txt.md
@@ -170,19 +170,17 @@ deFuse (PMID 21625565), Chimerascan (PMID 21840877), STAR (PMID 26334920), BAMSu
 ----------------------------------------
 
 ## Project 7: Blockchain for Infectious Disease
-**Team Lead:** Veena Ghorakavi
+**Team Lead:** Veena Ghorakavi (vghorakavi [AT] gmail.com)
 
+*Infectious diseases are widespread and are difficult to track. Blockchain has the capabilities to track infectious diseases without revealing information about the people impacted and with location data.*
 
 **Required Skills**
-- Python : * *
-- Blockhain: *
-
+- Python : *
+- Epidemiology: *
 
 **Beneficial Skills**
-- Solidity Contracts
+- Blockchain
 - Virology
-- Epidemiology / Biostatistics
-- Blockchain development
  
 **Abstract:**
 
