Updated Project 4 with links and grammar fix.

--- a/_posts/2018-08-11-Projects2018.txt.md
+++ b/_posts/2018-08-11-Projects2018.txt.md
@@ -88,7 +88,7 @@ We used MetaPathways v2.5 in combination with Pathway Tools and the MetaCyc hier
 ----------------------------------------
 
 
-## Project 4: beRi: Virtual Environments for R
+## [Project 4: beRi: Virtual Environments for R](https://github.com/datasnakes/beRi)
 **Team Lead:** Rob Gilmore (robgilmore127 [AT] gmail.com)
 
 *Are you a bioinformatician frustrated by R's inability to resolve common dependency issues? Help develop beRi, a package management, reproducible workflow, and installation toolkit for the R programming language.*
@@ -105,13 +105,13 @@ We used MetaPathways v2.5 in combination with Pathway Tools and the MetaCyc hier
 - Virtualization
 - Leadership
 - PyCharm / Rstudio / Atom IDE
-- R Functions: devtools, packrate, miniCRAN, tidyverse
+- R Functions: devtools, packrat, miniCRAN, tidyverse
 - Python Libs: click, yaml, cookiecutter
 - Knowledge of local craft beers
 
 **Abstract:**
 
-The R programming language currently lacks a standard way to resolve common dependency issues that make it difficult to reproduce various data analysis. Therefore the R community needs a tool or toolkit like Python's pip or JavaScript's npm. beRi ("beri environments for R installations") is a package management, reproducible workflow, and installation toolkit for the R programming language. The project will be developed under 4 separate repositories: renv (virtual environments), rinse (source installation), rut (dependency utils), and beRi (core). This project will primarily be built using Python 3, but will also utilize R and bash. R's documentation will be relied on for guidance.
+The R programming language currently lacks a standard way to resolve common dependency issues that make it difficult to reproduce various data analysis. Therefore the R community needs a tool or toolkit like Python's pip or JavaScript's npm. beRi ("beri environments for R installations") is a package management, reproducible workflow, and installation toolkit for the R programming language. The project will be developed under 4 separate repositories: [renv](https://github.com/datasnakes/renv) (virtual environments), [rinse](https://github.com/datasnakes/rinse) (source installation), [rut](https://github.com/datasnakes/rut) (dependency utils), and beRi (core). This project will primarily be built using Python 3, but will also utilize R and bash. R's documentation will be relied on for guidance.
 
 ----------------------------------------
 
