--- a/_posts/2018-08-11-Schedule.md
+++ b/_posts/2018-08-11-Schedule.md
@@ -21,7 +21,7 @@ Where: [East Atrium Life Sciences Institute (LSI), University of British Columbi
 | 1:00 PM | Lunch               | LSI, UBC |
 | 2:00 PM | Continue hacking    | LSI, UBC |
 | 5:00 PM | Team Scrum + wrap-up | LSI, UBC |
-| 5:30 PM | hackseq Evening Social | TBD, UBC |
+| 5:30 PM | Unofficial Evening Social | TBD, UBC |
 
 ## Saturday October 13
 
@@ -32,7 +32,7 @@ Where: [East Atrium Life Sciences Institute (LSI), University of British Columbi
 | 12:00 PM | Lunch               | LSI, UBC |
 | 2:00 PM | Hacking...    | LSI, UBC |
 | 5:00 PM | Team Scrum + wrap-up | LSI, UBC |
-| 5:30 PM | Unofficaial Evening Social | TBD, UBC |
+| 5:30 PM | *hackseq Evening Social* | Mahony and Sons, UBC |
 
 ## Sunday October 14
 
